...
                }
            }
        },
        navigationIcon = {
            if (showBack) {
                MakIconButton(
                    label = "Wstecz",
                    icon = Icons.AutoMirrored.Outlined.ArrowBack,
                    onClick = onBack,
                    modifier = Modifier.padding(start = 4.dp)
                )
            }
        },
...
